<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:cursorVisible="false"
        android:gravity="start"
        android:hint="@string/edit_diary_title_hint"
        android:singleLine="true"
        android:textColor="@color/diary_title"
        android:textSize="24sp"
        android:typeface="serif"
        android:freezesText="true"
        app:layout_constraintEnd_toStartOf="@+id/edt_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_gallery" />

    <TextView
        android:id="@+id/edt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:hint="@string/edit_diary_date_hint"
        android:text="@string/edit_diary_date_hint"
        android:textColor="@color/diary_title"
        android:textColorHint="@color/bottom_nav_item_normal"
        android:textSize="16sp"
        android:typeface="serif"
        android:freezesText="true"
        app:layout_constraintBottom_toBottomOf="@+id/edt_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt_title" />

    <ImageButton
        android:id="@+id/imgBtn_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:src="@mipmap/ic_sunny"
        app:layout_constraintBottom_toBottomOf="@+id/tv_place"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_place" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_circles"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_gallery_circle"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_gallery"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_place"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imgBtn_weather"
        app:layout_constraintStart_toStartOf="@+id/img_place"
        app:layout_constraintTop_toBottomOf="@+id/tv_place">

        <fragment
            android:id="@+id/autocomplete_fragment"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/img_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@mipmap/ic_map"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_date" />


    <TextView
        android:id="@+id/tv_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:text="@string/edit_diary_place_hint"
        android:textSize="16sp"
        android:freezesText="true"
        app:layout_constraintStart_toEndOf="@+id/img_place"
        app:layout_constraintTop_toBottomOf="@+id/edt_date" />

    <EditText
        android:id="@+id/edt_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:autoLink="all"
        android:background="@drawable/diary_content_border"
        android:freezesText="true"
        android:gravity="top"
        android:hint="@string/edit_diary_content_hint"
        android:includeFontPadding="true"
        android:inputType="textMultiLine"
        android:lineSpacingExtra="1.5dp"
        android:minLines="4"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceLargeInverse"
        android:textColor="@color/diary_title"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imgBtn_weather"
        app:layout_constraintStart_toStartOf="@+id/img_tags"
        app:layout_constraintTop_toBottomOf="@+id/img_tags" />


    <ImageView
        android:id="@+id/img_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@mipmap/ic_tags"
        app:layout_constraintStart_toStartOf="@+id/img_place"
        app:layout_constraintTop_toBottomOf="@+id/card_place" />


    <mabbas007.tagsedittext.TagsEditText
        android:id="@+id/edt_tags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@null"
        android:freezesText="true"
        android:hint="@string/edit_diary_tags_hint"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColorHint="@color/diary_title"
        android:textSize="16sp"
        app:allowSpaceInTag="true"
        app:layout_constraintBottom_toBottomOf="@+id/img_tags"
        app:layout_constraintEnd_toEndOf="@+id/imgBtn_weather"
        app:layout_constraintStart_toEndOf="@+id/img_tags"
        app:layout_constraintTop_toTopOf="@+id/img_tags"
        app:tagsBackground="@drawable/tags_border"
        app:tagsCloseImagePadding="1dp"
        app:tagsCloseImageRight="@mipmap/ic_close"
        app:tagsPaddingBottom="3dp"
        app:tagsPaddingLeft="7dp"
        app:tagsPaddingRight="4dp"
        app:tagsPaddingTop="3dp"
        app:tagsTextColor="@color/tags_text" />


</androidx.constraintlayout.widget.ConstraintLayout>