<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar"
        android:background="@color/white"
        android:elevation="4dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@null"
            android:text="@string/toolbar_edit"
            android:textColor="@color/toolbar_text"
            android:textSize="16sp"
            android:visibility="gone"
            tools:layout_editor_absoluteX="296dp"
            tools:layout_editor_absoluteY="11dp" />

        <Button
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@null"
            android:text="@string/toolbar_done"
            android:textColor="@color/toolbar_text"
            android:textSize="16sp"
            android:visibility="gone"
            tools:layout_editor_absoluteX="296dp"
            tools:layout_editor_absoluteY="11dp" />

        <ImageButton
            android:id="@+id/imgBtn_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@mipmap/ic_menu"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="19dp" />


        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:searchIcon="@mipmap/ic_search"
            app:queryHint="@string/search_hint"
            android:layout_gravity="end"
            android:paddingStart="0dp"
            android:paddingEnd="5dp">

        </androidx.appcompat.widget.SearchView>

        <ImageButton
            android:id="@+id/imgBtn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_back_arrow"
            android:visibility="gone"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="15dp" />

        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/toolbar_title"
            android:textSize="20sp"
            android:typeface="serif"
            />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/bottom_navigation_main"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_bottom_navigation_main"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:elevation="2dp"
        app:itemIconSize="@dimen/size_bottom_nav_icon"
        app:itemIconTint="@drawable/bottom_nav_item_selector"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>
