<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/weather_doalog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_weather"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_choose_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/dialog_choose_weather"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/img_sunny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@mipmap/ic_sunny"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/img_sun_cloud"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_choose_weather" />

        <ImageButton
            android:id="@+id/img_sun_cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@mipmap/ic_cloud_sun"
            app:layout_constraintBottom_toBottomOf="@+id/img_sunny"
            app:layout_constraintEnd_toStartOf="@+id/img_cloudy"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_sunny"
            app:layout_constraintTop_toTopOf="@+id/img_sunny" />

        <ImageButton
            android:id="@+id/img_cloudy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@mipmap/ic_cloudy"
            app:layout_constraintBottom_toBottomOf="@+id/img_sun_cloud"
            app:layout_constraintEnd_toStartOf="@+id/img_windy"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_sun_cloud"
            app:layout_constraintTop_toTopOf="@+id/img_sun_cloud" />

        <ImageButton
            android:id="@+id/img_windy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@mipmap/ic_windy"
            app:layout_constraintBottom_toBottomOf="@+id/img_cloudy"
            app:layout_constraintEnd_toStartOf="@+id/img_rain"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_cloudy"
            app:layout_constraintTop_toTopOf="@+id/img_cloudy" />

        <ImageButton
            android:id="@+id/img_rain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@mipmap/ic_raining"
            app:layout_constraintBottom_toBottomOf="@+id/img_windy"
            app:layout_constraintEnd_toStartOf="@+id/img_snow"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_windy"
            app:layout_constraintTop_toTopOf="@+id/img_windy" />


        <ImageButton
            android:id="@+id/img_snow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:background="@mipmap/ic_snowflake"
            app:layout_constraintBottom_toBottomOf="@+id/img_rain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_rain"
            app:layout_constraintTop_toTopOf="@+id/img_rain" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>