...

    <!-- Layout Series -->
    //activity_main
    <string name="toolbar_title">Memories</string>
    <string name="search_hint">Search by title or tags</string>
    <string name="toolbar_edit">Edit</string>
    <string name="toolbar_done">Done</string>

    //dialog_choose_weather
    <string name="dialog_choose_weather">Choose Weather</string>

    //dialog font
    <string name="dialog_choose_font">Font Preview</string>
...
    <string name="diary_title">Travel</string>
    <string name="diary_date">11th January 2019</string>

    //item_edit
    <string name="edit_diary_title_hint">Title</string>
    <string name="edit_diary_date_hint">Date</string>
    <string name="edit_diary_place_hint">Where am I ?</string>
    <string name="edit_diary_content_hint">Write Down Your Day ....</string>
    <string name="edit_diary_tags_hint">Add tags</string>

    //item_settings
    <string name="settings_user">User</string>
    <string name="settings_data">Data</string>
...
